# real-time-icu-monitoring-system

./: README.md  run.sh
backend/: alerts.py  config.py  database.py  main.py  models.py  requirements.txt  scheduler.py  simulator.py
docker/: Dockerfile  docker-compose.yml  nginx.conf
docs/: api_docs.md  architecture.md  system_design.md
frontend/: app.js  index.html  styles.css
icu-monitoring-system/: README.md  docker-compose.yml
icu-monitoring-system/ai-module/julia/: Dockerfile  kalman_filter.jl
icu-monitoring-system/ai-module/python/: Dockerfile  api_server.py  predictor.py  requirements.txt
icu-monitoring-system/ai-module/r/: Dockerfile  vitals_analysis.R
icu-monitoring-system/alert-engine/: Cargo.toml  Dockerfile
icu-monitoring-system/alert-engine/src/: consumer.rs  main.rs  notifier.rs  rules.rs  types.rs
icu-monitoring-system/backend-api/: Dockerfile  pom.xml
icu-monitoring-system/backend-api/src/main/java/com/icu/api/: IcuBackendApplication.java
icu-monitoring-system/backend-api/src/main/java/com/icu/api/config/: KafkaConfig.java  SecurityConfig.java  WebSocketConfig.java
icu-monitoring-system/backend-api/src/main/java/com/icu/api/controller/: AlertController.java  AuthController.java  PatientController.java
icu-monitoring-system/backend-api/src/main/java/com/icu/api/dto/: PatientDto.java  VitalsUpdateDto.java
icu-monitoring-system/backend-api/src/main/java/com/icu/api/model/: Alert.java  Patient.java  User.java  (+1 more)
icu-monitoring-system/backend-api/src/main/resources/: application.yml
icu-monitoring-system/core-engine/: CMakeLists.txt  Dockerfile
icu-monitoring-system/core-engine/include/: kafka_publisher.hpp  patient.hpp  scheduler.hpp  vitals_simulator.hpp
icu-monitoring-system/core-engine/src/: kafka_publisher.cpp  main.cpp  scheduler.cpp  vitals_simulator.cpp
icu-monitoring-system/database/migrations/: V1__initial_schema.sql
icu-monitoring-system/frontend/: Dockerfile  package.json
icu-monitoring-system/frontend/src/: App.tsx
icu-monitoring-system/frontend/src/components/alerts/: AlertsPanel.tsx
icu-monitoring-system/frontend/src/components/charts/: VitalsChart.tsx
icu-monitoring-system/frontend/src/components/dashboard/: ICUDashboard.tsx  PatientCard.tsx  StatsBar.tsx
icu-monitoring-system/frontend/src/components/layout/: LoginPage.tsx
icu-monitoring-system/frontend/src/hooks/: useWebSocket.ts
icu-monitoring-system/frontend/src/services/: api.ts
icu-monitoring-system/frontend/src/types/: index.ts
icu-monitoring-system/scripts/: setup.sh  test_api.sh
tests/: test_api.py  test_scheduler.py
(+10 files in other folders)
