[package]
name = "icu-alert-engine"
version = "1.0.0"
edition = "2021"
description = "ICU Real-Time Alert Engine – event-driven critical vitals detection"
authors = ["ICU Engineering Team"]

[[bin]]
name = "alert-engine"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Kafka consumer
rdkafka = { version = "0.36", features = ["cmake-build"] }

# HTTP client (to call backend API)
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async channels
tokio-stream = "0.1"
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Config from environment
dotenvy = "0.15"

# Metrics (Prometheus-compatible)
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
